mengubah deskripsi foto

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dolore! Dolor beatae, quam perferendis hic sunt nobis laboriosam rem ab?</p>
+                <p>Halo Perkenalkan Nama saya Nanda Addi Wijaya saya adalah seorang Photographer dan Videographer Di Kota Malang.</p>
             </div>
             <div class="col-md-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam maiores explicabo, ad asperiores omnis beatae fugit possimus. Dicta dolorum, rem enim dolore consequatur ipsa accusamus.</p>
+                <p>Saya sering mengabadikan Foto dan Video pemandangan dari sudut kota malang dan saya juga sering berwisata di alam,jangan lupa kunjungi instagram saya @nandaddi terimakasih...</p>
             </div>
         </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="card">
                 <img src="img/2.jpg" class="card-img-top" alt="Project 2">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang.</p>
                 </div>
               </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="card">
                 <img src="img/1.jpg" class="card-img-top" alt="Project 1">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Foto ini saya abadikan saat saya pergi ke jogja tepatnya di alun-alun jogja di situ terlihat orang yang sedang menaiki delman.</p>
                 </div>
               </div>
         </div>
@@ -108,7 +108,7 @@
             <div class="card">
                 <img src="img/3.jpg" class="card-img-top" alt="Project 3">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Foto ini adalah siluet dari gunung putri tidur,foto ini saya abadikan saat menjelang matahari terbenam di kota malang.</p>
                 </div>
               </div>
         </div>
