--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#home">Nanda Addi</a>
+        <a class="navbar-brand" href="#home">MY PORTOFOLIO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,10 +44,10 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/WhatsApp Image 2021-11-02 at 18.10.27 (3).jpeg" alt="Nanda Addi" width="170" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">NANDA ADDI WIJAYA</h1>
-      <p class="lead">Photography | Videography</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <img src="img/IMG_0427.jpg" alt="NANDA ADDI WIJAYA" width="170" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 fst-italic text-light">NANDA ADDI WIJAYA</h1>
+      <p class="lead text-light">Photography | Videography</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#b6a2a2" fill-opacity="1" d="M0,224L48,234.7C96,245,192,267,288,256C384,245,480,203,576,192C672,181,768,203,864,202.7C960,203,1056,181,1152,192C1248,203,1344,245,1392,266.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
         <path
           fill="#ffffff"
           fill-opacity="1"
@@ -61,21 +61,21 @@
     <section id="about">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col text-light">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-            <div class="col-md-4">
+            <div class="col-md-4 text-light">
                 <p>Halo Perkenalkan Nama saya Nanda Addi Wijaya saya adalah seorang Photographer dan Videographer Di Kota Malang.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 text-light">
                 <p>Saya sering mengabadikan Foto dan Video pemandangan dari sudut kota malang dan saya juga sering berwisata di alam,jangan lupa kunjungi instagram saya @nandaddi terimakasih...</p>
             </div>
         </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#474642" fill-opacity="1" d="M0,160L80,154.7C160,149,320,139,480,160C640,181,800,235,960,240C1120,245,1280,203,1360,181.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir About -->
 
@@ -83,32 +83,32 @@
 <section id="projects">
 <div class="container">
     <div class="row text-center mb-3">
-        <div class="col">
-            <h2>My Projects</h2>
+        <div class="col text-light">
+            <h2>PHOTO ALBUM</h2>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4 mb-3">
             <div class="card">
                 <img src="img/2.jpg" class="card-img-top" alt="Project 2">
-                <div class="card-body">
-                  <p class="card-text">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang.</p>
+                <div class="card-body bg-secondary">
+                  <p class="card-text text-light">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang.</p>
                 </div>
               </div>
         </div>
         <div class="col-md-4 mb-3">
             <div class="card">
                 <img src="img/1.jpg" class="card-img-top" alt="Project 1">
-                <div class="card-body">
-                  <p class="card-text">Foto ini saya abadikan saat saya pergi ke jogja tepatnya di alun-alun jogja di situ terlihat orang yang sedang menaiki delman.</p>
+                <div class="card-body bg-secondary">
+                  <p class="card-text text-light">Foto ini saya abadikan saat saya pergi ke jogja tepatnya di alun-alun jogja di situ terlihat orang yang sedang menaiki delman.</p>
                 </div>
               </div>
         </div>
         <div class="col-md-4 mb-3">
             <div class="card">
                 <img src="img/3.jpg" class="card-img-top" alt="Project 3">
-                <div class="card-body">
-                  <p class="card-text">Foto ini adalah siluet dari gunung putri tidur,foto ini saya abadikan saat menjelang matahari terbenam di kota malang.</p>
+                <div class="card-body bg-secondary">
+                  <p class="card-text text-light">Foto ini adalah siluet dari gunung putri tidur,foto ini saya abadikan saat menjelang matahari terbenam di kota malang.</p>
                 </div>
               </div>
         </div>
@@ -121,7 +121,7 @@
     <section id="contact">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col text-light">
             <h2>Contact Me</h2>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <div class="col-md-6">
             <form>
               <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
+                <label for="name" class="form-label ">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name">
           
               </div>
@@ -141,12 +141,12 @@
                 <label for="pesan" class="form-label">pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-secondary">Kirim</button>
             </form>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,128L48,117.3C96,107,192,85,288,106.7C384,128,480,192,576,213.3C672,235,768,213,864,208C960,203,1056,213,1152,213.3C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#474642" fill-opacity="1" d="M0,160L80,154.7C160,149,320,139,480,160C640,181,800,235,960,240C1120,245,1280,203,1360,181.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
     </section>
     <!-- akhir contact -->
 
