merubah deskripsi foto

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="card">
                 <img src="img/2.jpg" class="card-img-top" alt="Project 2">
                 <div class="card-body bg-secondary">
-                  <p class="card-text text-light">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang.</p>
+                  <p class="card-text text-light">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang,terlihat matahari akan tenggelam pada saat itu.</p>
                 </div>
               </div>
         </div>
