--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="./img/IMG_0427.jpg" type="image/x-icon" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <!-- bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 
-    <!-- my CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+      integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ=="
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="style.css" />
-    <title>My Portofolio | Nanda Addi</title>
+
+    <title>My Portfolio | Nanda Addi</title>
   </head>
-  <body id="home">
+
+  <body id="home bg-primary">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#home">MY PORTOFOLIO</a>
+        <a class="navbar-brand" href="#">MY PORTOFOLIO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +39,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Project</a>
+              <a class="nav-link" href="#projects">Album</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -42,82 +50,87 @@
     </nav>
     <!-- Akhir Navbar -->
 
-    <!-- jumbotron -->
+    <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/IMG_0427.jpg" alt="NANDA ADDI WIJAYA" width="170" class="rounded-circle img-thumbnail" />
+      <img src="img/IMG_0427.jpg" alt="Nanda Addi Wijaya" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 fst-italic text-light">NANDA ADDI WIJAYA</h1>
-      <p class="lead text-light">Photography | Videography</p>
+      <p class="lead fst-italic text-light"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#b6a2a2" fill-opacity="1" d="M0,224L48,234.7C96,245,192,267,288,256C384,245,480,203,576,192C672,181,768,203,864,202.7C960,203,1056,181,1152,192C1248,203,1344,245,1392,266.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,0L60,10.7C120,21,240,43,360,69.3C480,96,600,128,720,149.3C840,171,960,181,1080,170.7C1200,160,1320,128,1380,112L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-        ></path>
-      </svg>
+      <path
+        fill="#ffffff"
+        fill-opacity="1"
+        d="M0,0L60,10.7C120,21,240,43,360,69.3C480,96,600,128,720,149.3C840,171,960,181,1080,170.7C1200,160,1320,128,1380,112L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+      ></path>
+    </svg>
     </section>
-    <!-- akhir jumbotron -->
+    <!-- Akhir Jumbotron -->
 
     <!-- About -->
     <section id="about">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col text-light">
+          <div class="col" data-aos="fade-down">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-            <div class="col-md-4 text-light">
-                <p>Halo Perkenalkan Nama saya Nanda Addi Wijaya saya adalah seorang Photographer dan Videographer Di Kota Malang.</p>
-            </div>
-            <div class="col-md-4 text-light">
-                <p>Saya sering mengabadikan Foto dan Video pemandangan dari sudut kota malang dan saya juga sering berwisata di alam,jangan lupa kunjungi instagram saya @nandaddi terimakasih...</p>
-            </div>
-        </div>
+          <div class="col-md-4" data-aos="fade-right">
+            <p>Halo Perkenalkan Nama saya Nanda Addi Wijaya saya adalah seorang Photographer dan Videographer Di Kota Malang.</p>
+          </div>
+          <div class="col-md-4" data-aos="fade-left">
+            <p>Saya sering mengabadikan Foto dan Video pemandangan dari sudut kota malang dan saya juga sering berwisata di alam,jangan lupa kunjungi instagram saya @nandaddi terimakasih...</p>
+          </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#474642" fill-opacity="1" d="M0,160L80,154.7C160,149,320,139,480,160C640,181,800,235,960,240C1120,245,1280,203,1360,181.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#474642"
+          fill-opacity="10"
+          d="M0,96L48,122.7C96,149,192,203,288,192C384,181,480,107,576,80C672,53,768,75,864,101.3C960,128,1056,160,1152,165.3C1248,171,1344,149,1392,138.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir About -->
 
     <!-- Project -->
-<section id="projects">
-<div class="container">
-    <div class="row text-center mb-3">
-        <div class="col text-light">
+    <section id="projects">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col text-light">
             <h2>PHOTO ALBUM</h2>
+          </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 mb-3">
+        <div class="row">
+          <div class="col-md-4 mb-3">
             <div class="card">
-                <img src="img/2.jpg" class="card-img-top" alt="Project 2">
-                <div class="card-body bg-secondary">
-                  <p class="card-text text-light">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang,terlihat matahari akan tenggelam pada saat itu.</p>
-                </div>
+              <img src="img/2.jpg" class="card-img-top" alt="Project 2" />
+              <div class="card-body bg-secondary">
+                <p class="card-text text-light">Foto ini saya abadikan saat pemandangan sunset sore hari di Kota Malang,terlihat matahari akan tenggelam pada saat itu.</p>
               </div>
-        </div>
-        <div class="col-md-4 mb-3">
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
             <div class="card">
-                <img src="img/1.jpg" class="card-img-top" alt="Project 1">
-                <div class="card-body bg-secondary">
-                  <p class="card-text text-light">Foto ini saya abadikan saat saya pergi ke jogja tepatnya di alun-alun jogja di situ terlihat orang yang sedang menaiki delman.</p>
-                </div>
+              <img src="img/1.jpg" class="card-img-top" alt="Project 1" />
+              <div class="card-body bg-secondary">
+                <p class="card-text text-light">Foto ini saya abadikan saat saya pergi ke jogja tepatnya di alun-alun jogja di situ terlihat orang yang sedang menaiki delman.</p>
               </div>
-        </div>
-        <div class="col-md-4 mb-3">
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
             <div class="card">
-                <img src="img/3.jpg" class="card-img-top" alt="Project 3">
-                <div class="card-body bg-secondary">
-                  <p class="card-text text-light">Foto ini adalah siluet dari gunung putri tidur,foto ini saya abadikan saat menjelang matahari terbenam di kota malang.</p>
-                </div>
+              <img src="img/3.jpg" class="card-img-top" alt="Project 3" />
+              <div class="card-body bg-secondary">
+                <p class="card-text text-light">Foto ini adalah siluet dari gunung putri tidur,foto ini saya abadikan saat menjelang matahari terbenam di kota malang.</p>
               </div>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-</section>
+      </div>
+    </section>
     <!-- Akhir Project -->
 
-    <!-- contact -->
+    <!-- Contact -->
     <section id="contact">
       <div class="container">
         <div class="row text-center mb-3">
@@ -127,35 +140,114 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="revo-contact">
               <div class="mb-3">
-                <label for="name" class="form-label ">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name">
-          
+                <label for="name" class="form-label">Nama Lengkap</label>
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email">
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <div class="mb-3">
-                <label for="pesan" class="form-label">pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <label for="pesan" class="form-label">Pesan</label>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-secondary">Kirim</button>
+              <button type="submit" class="btn btn-kirim">Kirim</button>
+
+              <button class="btn btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#474642" fill-opacity="1" d="M0,160L80,154.7C160,149,320,139,480,160C640,181,800,235,960,240C1120,245,1280,203,1360,181.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#bcdf1f"
+          fill-opacity="10"
+          d="M0,128L30,149.3C60,171,120,213,180,224C240,235,300,213,360,192C420,171,480,149,540,160C600,171,660,213,720,197.3C780,181,840,107,900,101.3C960,96,1020,160,1080,197.3C1140,235,1200,245,1260,234.7C1320,224,1380,192,1410,176L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
     </section>
-    <!-- akhir contact -->
+    <!-- Akhir Contact -->
 
-    <!-- footer -->
-  <footer class="bg-secondary text-white text-center p-5">
-
-      <p><i class="bi bi-sun"></i> CREATED BY <a href="https://www.instagram.com/nandaddi" class="text-white fw-bold">NANDA ADDI WIJAYA</a></p>
+    <!-- Footer -->
+    <footer class="text-white text-center pb-5">
+      <p>CREATED BY <i class="bi bi-arrow-right-short"></i></i></i>  <a href="https://www.instagram.com/nandaddi/" class="text-white fw-bold">NANDA ADDI WIJAYA</a></p>
     </footer>
-    <!-- akhir footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Akhir Footer -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
+
+    <script>
+      gsap.from(".img-thumbnail", { duration: 1, rotationX: 90 });
+      gsap.from(".navbar", { duration: 1.5, opacity: 0, y: "-100%", ease: "bounce" });
+      gsap.from(".display-4", { delay: 1, duration: 1, opacity: 0, x: "-10%" });
+
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { delay: 1.5, duration: 1.5, text: "Photography & Videography" });
+
+      const galleryImages = document.querySelectorAll(".gallery-img");
+      const delayTimes = [0, 50, 100, 150, 200, 250, 300, 350, 400, 450];
+
+      function shuffleArray(array) {
+        for (var i = array.length - 1; i > 0; i--) {
+          var j = Math.floor(Math.random() * (i + 1));
+          var temp = array[i];
+          array[i] = array[j];
+          array[j] = temp;
+        }
+        return array;
+      }
+      const newDelay = shuffleArray(delayTimes);
+      galleryImages.forEach((img, i) => {
+        img.dataset.aos = "fade-up";
+        img.dataset.aosDelay = i * 50 + "";
+      });
+
+      AOS.init({
+        once: true,
+        duration: 3000,
+      });
+    </script>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbynDdjQWKSsUo8qlJcQ0zbGCPnR1yAZmV8OrCaoyMJqX_FWRt9YG9Ftp9rx5PdCIM7gFg/exec";
+      const form = document.forms["revo-contact"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // reset formnya
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
